# voice-typing

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  user_dictionary.txt
.github/workflows/: release.yml
assets/icons/macos/: daydream.icns
rust-asr/: Cargo.toml  README.md
rust-asr/src/: lib.rs  mic.rs  model.rs  service.rs
rust-audio/: Cargo.toml  README.md
rust-audio/src/: lib.rs
rust-core/: Cargo.toml  README.md
rust-core/src/: history.rs  lib.rs  mapper.rs  models.rs  processor.rs  search.rs
rust-ext/: Cargo.toml  README.md  build.rs
rust-ext/chrome/: background.js  content.css  content.js  manifest.json
rust-ext/safari/: Info.plist  background.js  content.css  manifest.json
rust-ext/src/: lib.rs
rust-platform-windows/: Cargo.toml  README.md
rust-platform-windows/src/: backdrop.rs  injector.rs  lib.rs
rust-ui/: Cargo.toml  README.md  build.rs
rust-ui/assets/icons/: README.md
rust-ui/src/: bridge.rs  cli.rs  gui.rs  icons.rs  main.rs  model_download.rs
scripts/: build-msi.ps1  install-startmenu.ps1
wix/: voice-typing.wxs
