[package]
name = "voice-typing-asr"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Local ASR runtime built on Sherpa-ONNX for the voice-typing workspace"
repository = "https://github.com/maceip/voice-typing"
homepage = "https://github.com/maceip/voice-typing"
documentation = "https://docs.rs/voice-typing-asr"
readme = "README.md"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
cpal = "0.17.3"
voice-typing-core = { version = "0.1.0", path = "../rust-core" }
hound = "3.5.1"
sherpa-onnx = "1.12.36"
tokio = { version = "1.48.0", features = ["rt", "sync"] }
