[package]
name = "voice-typing-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Shared core types and text mapping logic for the voice-typing workspace"
repository = "https://github.com/maceip/voice-typing"
homepage = "https://github.com/maceip/voice-typing"
documentation = "https://docs.rs/voice-typing-core"
readme = "README.md"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["sync"] }
uuid = { version = "1.18.1", features = ["v4"] }
