[package]
name = "voice-typing-platform-windows"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
raw-window-handle = "0.6.2"
winreg = "0.55"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
