[package]
name = "voice-typing-platform-windows"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Windows-specific window material and text injection support for voice-typing"
repository = "https://github.com/maceip/voice-typing"
homepage = "https://github.com/maceip/voice-typing"
documentation = "https://docs.rs/voice-typing-platform-windows"
readme = "README.md"

[dependencies]
anyhow.workspace = true

[target.'cfg(windows)'.dependencies]
raw-window-handle = "0.6.2"
winreg = "0.56"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_UI_Controls", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
