[package]
name = "voice-typing"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Fast local voice typing for any focused window or browser input"
repository = "https://github.com/maceip/voice-typing"
homepage = "https://github.com/maceip/voice-typing"
documentation = "https://docs.rs/voice-typing"
readme = "README.md"
default-run = "voice-typing"

[[bin]]
name = "voice-typing"
path = "src/main.rs"

[features]
default = []
extensions = ["dep:voice-typing-ext"]

[dependencies]
anyhow = "1.0"
bzip2 = "0.4"
voice-typing-asr = { version = "0.1.0", path = "../rust-asr" }
voice-typing-core = { version = "0.1.0", path = "../rust-core" }
voice-typing-ext = { version = "0.1.0", path = "../rust-ext", optional = true }
voice-typing-platform-windows = { version = "0.1.0", path = "../rust-platform-windows" }
futures-util = "0.3"
iced = { version = "0.14.0", features = ["tokio", "svg", "canvas"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde_json = "1"
tar = "0.4"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "sync", "net", "macros"] }
tokio-tungstenite = "0.26"
