[package]
name = "voice-typing"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Fast local voice typing for any focused window or browser input"
repository = "https://github.com/maceip/voice-typing"
homepage = "https://github.com/maceip/voice-typing"
documentation = "https://docs.rs/voice-typing"
readme = "README.md"
default-run = "voice-typing"

[[bin]]
name = "voice-typing"
path = "src/main.rs"

[features]
default = []
extensions = [
    "dep:futures-util",
    "dep:tokio-tungstenite",
    "dep:voice-typing-ext",
]

[dependencies]
anyhow.workspace = true
bzip2 = "0.6"
voice-typing-asr.workspace = true
voice-typing-core.workspace = true
voice-typing-ext = { workspace = true, optional = true }
voice-typing-platform-windows.workspace = true
futures-util = { version = "0.3", optional = true }
iced = { version = "0.14.0", features = ["tokio", "svg", "canvas", "image"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }
serde_json = "1"
tar = "0.4"
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "sync", "net", "macros"] }
tokio-tungstenite = { version = "0.29", optional = true }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
